@@ -146,10 +146,10 @@
 #define STRATA_OFFSET_CFI_WRITE_BUFFER_LSB      STRATA_OFFSET_CFI_DATA(0x002A)
 #define STRATA_OFFSET_CFI_WRITE_BUFFER_MSB      STRATA_OFFSET_CFI_DATA(0x002B)
 #define STRATA_OFFSET_CFI_BLOCK_REGIONS         STRATA_OFFSET_CFI_DATA(0x002C)
-#define STRATA_OFFSET_CFI_BLOCK_COUNT_LSB(_i_)  STRATA_OFFSET_CFI_DATA(0x002D + (4 * _i_))
-#define STRATA_OFFSET_CFI_BLOCK_COUNT_MSB(_i_)  STRATA_OFFSET_CFI_DATA(0x002E + (4 * _i_))
-#define STRATA_OFFSET_CFI_BLOCK_SIZE_LSB(_i_)   STRATA_OFFSET_CFI_DATA(0x002F + (4 * _i_))
-#define STRATA_OFFSET_CFI_BLOCK_SIZE_MSB(_i_)   STRATA_OFFSET_CFI_DATA(0x0030 + (4 * _i_))
+#define STRATA_OFFSET_CFI_BLOCK_COUNT_LSB(_i_)  STRATA_OFFSET_CFI_DATA(0x002D + (4 * (_i_)))
+#define STRATA_OFFSET_CFI_BLOCK_COUNT_MSB(_i_)  STRATA_OFFSET_CFI_DATA(0x002E + (4 * (_i_)))
+#define STRATA_OFFSET_CFI_BLOCK_SIZE_LSB(_i_)   STRATA_OFFSET_CFI_DATA(0x002F + (4 * (_i_)))
+#define STRATA_OFFSET_CFI_BLOCK_SIZE_MSB(_i_)   STRATA_OFFSET_CFI_DATA(0x0030 + (4 * (_i_)))
 
 #define STRATA_STATUS_SR7   STRATA_SWAP(STRATA_PARALLEL(0x0080))
 #define STRATA_STATUS_SR6   STRATA_SWAP(STRATA_PARALLEL(0x0040))
@@ -471,6 +471,6 @@ strata_get_block_info(struct cyg_flash_dev* dev, const cyg_flashaddr_t addr, cyg
 #define STRATA_OFFSET_MANUFACTURER_ID   00
 #define STRATA_OFFSET_DEVICE_ID         02
 #define STRATA_OFFSET_LOCK_STATUS       04
-#define STRATA_OFFSET_CFI_DATA(_idx_)   (2 * _idx_)
+#define STRATA_OFFSET_CFI_DATA(_idx_)   (2 * (_idx_))
 
 #include "strata_aux.c"
